# camel-raisim-projects-tcp

camel-canine/: CMakeLists.txt
camel-canine/canine_controller/ControlMain/src/: HighControlMain.cpp  LowControlMain.cpp
camel-canine/canine_controller/ControlUtils/: CMakeLists.txt
camel-canine/canine_controller/ControlUtils/include/ControlUtils/: CubicSwingLeg.hpp  Gait.hpp
camel-canine/canine_controller/ControlUtils/src/: CubicSwingLeg.cpp  Gait.cpp  SwingLeg.cpp
camel-canine/canine_controller/LowController/: CMakeLists.txt
camel-canine/canine_controller/LowController/src/: LowPDcontrol.cpp  LowWholeBodyLocalPDController.cpp  LowWholeBodyPDController.cpp
camel-canine/canine_controller/PDcontroller/src/: JointPDController.cpp
camel-canine/canine_controller/convexMPC/: CMakeLists.txt
camel-canine/canine_controller/convexMPC/src/: MPCController.cpp  MPCSolver.cpp
camel-canine/canine_demo/: CanineMain.cpp  CanineSimul.cpp
camel-canine/canine_fsm/: CMakeLists.txt
camel-canine/canine_fsm/include/canine_fsm/: MainFSM.hpp
camel-canine/canine_fsm/src/: MainFSM.cpp
camel-canine/canine_simulation/: CMakeLists.txt
camel-canine/canine_simulation/src/: SimulCommand.cpp  SimulCommunication.cpp  SimulControlPanel.cpp  SimulControlPanelHigh.cpp  SimulMain.cpp  SimulStateEstimator.cpp  SimulVisualizer.cpp
camel-canine/canine_util/src/: Command.cpp  Filter.cpp  RobotMath.cpp  StateEstimator.cpp
camel-pendulum/: JoystickInfo.hpp  RobotDescription.hpp  SharedMemory.hpp  mainwindow.cpp  mainwindow.h
camel-tools/sensor/src/: LordImu3DmGx5Ahrs.cpp
(+24 files in other folders)
